--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "faunadb": "^4.5.4",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
