--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.31.0",
+    "axios": "^0.27.2",
     "faunadb": "^4.5.4",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
